kubernetes/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cloud-know-how
  name: cloud-know-how-route
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: cloud-know-how-service
  # tls:
  #   termination: edge
  #   insecureEdgeTerminationPolicy: Redirect
